@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.fattoquotidianotv" name="Il Fatto Quotidiano TV" version="1.0.2" provider-name="NeverWise">
+<addon id="plugin.video.fattoquotidianotv" name="Il Fatto Quotidiano TV" version="1.0.3" provider-name="NeverWise">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
     <import addon="script.module.neverwise" version="1.0.5"/>
